web/www/assets/styles.css
/* ... */
.suggestion:hover {
  background: rgb(22, 25, 233);
  color: rgb(255, 255, 255);
}

/*----- Dropdown -----*/
.drop-container {
  display: flex;
  flex-direction: row;
}

.drop-container h2 {
  background-color: #2e2e2e;
  color: #fff;
  padding: 5px;
  padding-inline: 10px;
  font-size: 16px;
  border: 0px;
  border-radius: 25px;
}

.drop-btn {
  background-color: var(--lighter-blue2);
  color: var(--lighter-blue5);
  padding: 5px;
  padding-inline: 10px;
  font-size: 16px;
  border: 2px solid var(--lighter-blue3);
  border-radius: 25px;
  cursor: pointer;
  width: 220px;
  transition: 0.3s;
}

.drop-btn:hover,
.drop-btn:focus {
  background-color: var(--highlight-blue);
  transition: 0.3s;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  width: 188px;
  border: none;
  z-index: 1;
  border-radius: 25px;
}

.dropdown-item {
  color: var(--lighter-blue5);
  width: 100%;
  background-color: var(--lighter-blue3);
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  cursor: pointer;
  transition: 0.3s;
}

.dropdown-content p:last-child {
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
}

.dropdown-content p:hover {
  background-color: var(--highlight-blue);
  transition: 0.3s;
}

/*----- Prompt -----*/
.bg-prompt {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  position: fixed;
  top: 0;
  justify-content: center;
  align-items: center;
  display: none;
}
.prompt {
  position: relative;
  padding: 10px;
  height: fit-content;
  width: fit-content;
  justify-content: space-between;
  border-radius: 5px;
  color: #fff;
  background: var(--dark-blue);
  padding: 20px;
  border-radius: 25px;
}
.prompt-text {
  color: var(--lighter-blue5);
  font-size: 16px;
  text-align: center;
  background-color: var(--darker-blue);
  border-radius: 15px;
  padding: 5px;
  margin-top: -40px;
  margin-bottom: 20px;
}
.prompt-content {
  align-items: center;
  justify-content: space-between;
}

.prompt-content input {
  border-radius: 10px;
  background-color: var(--lighter-blue3);
  padding: 3px;
  color: var(--lighter-blue5);
  margin-left: 5px;
  margin-right: 5px;
}

.prompt-content input:focus {
  border: 1px solid var(--lighter-blue4);
}

.prompt-content p {
  color: var(--lighter-blue5);
  margin-bottom: 20px;
}

.confirm,
.cancel,
.done,
.okay {
  font-size: 16px;
  padding: 5px;
  border-radius: 10px;
  color: var(--darker-blue);
  border: 2px solid var(--lighter-blue);
  box-shadow: var(--darker-blue) 5px 5px 2px;
  cursor: pointer;
}

.confirm,
.okay {
  background-color: var(--green);
}

.cancel,
.done {
  background-color: var(--red);
}

/*----- Multi Add -----*/
.multi-add {
  display: flex;
  flex-direction: row;
}
.multi-add input {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  padding: 2px;
}
.multi-add button {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  width: 20px;
  padding: 2px;
  font-size: 16px;
  font-weight: 600;
  color: #000;
  background: var(--green);
}

/*----- Modal Popup -----*/
.bg-modal {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  position: fixed;
  top: 0;
  justify-content: center;
  align-items: center;
  display: none;
  z-index: 9999;
}

.modal-content {
  width: 60%;
  height: fit-content;
  background-color: var(--dark-blue);
  border-radius: 10px;
  text-align: center;
  color: var(--lighter-blue5);
  padding: 5%;
  padding-top: 3%;
  position: absolute;
  align-content: center;
  box-shadow: var(--lighter-blue) 7px 7px 20px;
  z-index: 999;
}

.modal-content p {
  text-align: justify;
  width: 100%;
  color: var(--lighter-blue5);
  height: auto;
  align-self: center;
}

.modal-content img {
  width: 150px;
  height: 150px;
  align-self: center;
  padding: 10%;
}

.close {
  position: absolute;
  top: 0;
  right: 14px;
  font-size: 42px;
  transform: rotate(45deg);
  cursor: pointer;
  transition: all 2s;
}

.close:hover {
  rotate: 180deg;
}

/*----- Animations -----*/
@keyframes zoomin {
  0% {
    transform: scale(0, 0);
    opacity: 0;
  }

  100% {
    transform: scale(1, 1);
    opacity: 1;
  }
}

@keyframes zoomout {
  0% {
    transform: scale(1, 1);
    opacity: 1;
  }

  100% {
    transform: scale(0, 0);
    opacity: 0;
  }
}

@keyframes fadein {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fadeout {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

/*----- Popup -----*/
.popup-container {
  padding: 10px;
}

.popup {
  background-color: var(--lighter-blue3);
  display: flex;
  position: absolute;
  text-align: justify;
  border-radius: 10px;
  right: 20px;
  bottom: 20px;
  padding: 10px;
  height: 50px;
  width: fit-content;
}

.popup p {
  color: var(--lighter-blue5);
  font-size: 16px;
}

/*----- Scroll Bar -----*/
/* width */
::-webkit-scrollbar {
  width: 10px;
  background-color: var(--dark-blue);
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--highlight-blue);
  border-radius: 20px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #0029ff;
}

/*----- Login/Minimal -----*/
.minimal-section {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 29px);
  width: 100%;
  background: var(--darker-blue);
  align-items: center;
  text-align: center;
  background-image: url('img/widescreen-logo-4320-n.webp');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.minimal {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}
/* ... */

